--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -19,10 +19,19 @@
       referrerpolicy="no-referrer"
     ></script>
     <style>
+        /* body {
+            overflow: hidden;
+        } */
       .chat-screen {
         min-height: 75vh;
         max-height: 75vh;
         overflow-y: auto;
+      }
+      emoji-picker {
+        width: 400px;
+        height: 300px;
+        margin-top: calc(-90%)
+        
       }
     </style>
   </head>
@@ -43,16 +52,26 @@
           class="form-control"
           placeholder="Enter your message"
         />
-        <div style="position: relative; cursor: pointer;user-select: none !important;">
-            <span onclick="openemoji()" class="d-flex align-items-center justify-content-center" style="width: 3em;height: auto;font-size: 24px;">🙂</span>
+        <div
+          style="
+            position: relative;
+            cursor: pointer;
+            user-select: none !important;
+          "
+        >
+          <span
+            onclick="openemoji()"
+            class="d-flex align-items-center justify-content-center"
+            style="width: 3em; height: auto; font-size: 24px"
+            >🙂</span
+          >
           <div
-          class="emoji-box"
+            class="emoji-box"
             style="
               position: absolute;
               right: 0;
               border-radius: 1em;
               box-sizing: border-box;
-              overflow: hidden;
               display: none;
             "
           >
@@ -72,6 +91,10 @@
     </div>
     {{ room_name|json_script:"room-name" }}
     <script>
+
+    let emojibox = document.querySelector(".emoji-box");
+    const messageInputDom = document.querySelector("#chat-message-input");
+    const chat_screen = document.querySelector(".chat-screen");
       const roomName = JSON.parse(
         document.getElementById("room-name").textContent
       );
@@ -115,8 +138,8 @@
         console.error("Chat socket closed unexpectedly");
       };
 
-      document.querySelector("#chat-message-input").focus();
-      document.querySelector("#chat-message-input").onkeyup = function (e) {
+      messageInputDom.focus();
+      messageInputDom.onkeyup = function (e) {
         if (e.key === "Enter") {
           // enter, return
           document.querySelector("#chat-message-submit").click();
@@ -124,8 +147,13 @@
       };
 
       document.querySelector("#chat-message-submit").onclick = function (e) {
-        const messageInputDom = document.querySelector("#chat-message-input");
+        messageInputDom.click()
         const message = messageInputDom.value;
+
+        if (message.trim() == "") {
+            return
+        }
+
         chatSocket.send(
           JSON.stringify({
             command: "new_message",
@@ -154,33 +182,41 @@
       }
 
       function scroll_to_down() {
-        let box = document.querySelector(".chat-screen");
-        box.scrollTop = box.scrollHeight;
+        chat_screen.scrollTop = chat_screen.scrollHeight;
       }
 
       window.onload = () => {
         scroll_to_down();
+        chat_screen.addEventListener('click', () => {
+            emojibox .style.display = "none";
+        })
+        
+      
+        
+        messageInputDom.addEventListener('click', () => {
+            emojibox .style.display = "none";
+        })
+
         document
           .querySelector("emoji-picker")
           .addEventListener("emoji-click", (event) => {
-            const messageInputDom = document.querySelector("#chat-message-input");
-            messageInputDom.value += event.detail.unicode
-          }
-          );
+            const messageInputDom = document.querySelector(
+              "#chat-message-input"
+            );
+            messageInputDom.value += event.detail.unicode;
+          });
       };
 
       function openemoji() {
-        const messageInputDom = document.querySelector("#chat-message-input");
-        let box = document.querySelector('.emoji-box')
-        if (box.style.display === "none") {
-            box.style.display = "block";
+        
+        
+        if (emojibox .style.display === "none") {
+          emojibox .style.display = "block";
         } else {
-            messageInputDom.focus()
-            box.style.display = "none";
+          messageInputDom.focus();
+          emojibox .style.display = "none";
         }
-
       }
-
     </script>
     <!-- Include Bootstrap JS (Bootstrap 5.x.x) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
